make navbar links hve bigger touch targets; fix contact inputs not working on mobile

--- a/_sass/2_components/inputs.scss
+++ b/_sass/2_components/inputs.scss
@@ -32,7 +32,6 @@
 	touch-action: manipulation;
 	cursor: text;
 	background: none;
-	@include noSelect();
 	border: none;
 
 	height: 40px;
