--- a/_sass/3_modules/Navbar.scss
+++ b/_sass/3_modules/Navbar.scss
@@ -1,7 +1,12 @@
 .Navbar {
-	padding: $spacing-sm;
+	padding-top: $spacing-xs;
+	padding-bottom: $spacing-xs;
 	font-size: $fontSize-xs;
 	font-family: $font-system;
+}
+.Navbar-negativeMargins {
+	margin-left: -12px;
+	margin-right: -12px;
 }
 .Navbar-container {
 	@include flexbox();
@@ -34,10 +39,10 @@
 	color: inherit;
 	text-decoration: none;
 	font-weight: 500;
-	padding: 0;
+	padding: $spacing-xs;
 	> span {
 		display: block;
-		padding: 1px 6px 2px;
+		padding: 3px 6px 2px;
 	}
 	&.now-active {
 		opacity: 0.6;
@@ -56,6 +61,9 @@
 @media (min-width: $media-sm) {
 	.Navbar {
 		font-size: $fontSize-sm;
+	}
+	.Navbar-link > span {
+		padding-top: 2px;
 	}
 }
 @media (min-width: $media-lg) {
